# NCKU-106-CG

./: .gitignore  CMakeLists.txt  README.md  compile.bat  fs.txt  main.cpp  vs2.txt
cghw2/: Makefile  README.md  compile.bat  main.cpp  vs.txt
cghw3/: README.md  main.cpp
cghw3/shader/: fs.glsl
cghw3/shaders/: blinn-phong.vs.glsl  flat.fs.glsl  flat.vs.glsl  fs.glsl  gouraud.fs.glsl  vs.glsl
cghw4/: README.md  main.cpp
cghw4/shaders/: blinn-phong.blur.fs.glsl  blinn-phong.blur.vs.glsl  blinn-phong.fs.glsl  gouraud.fs.glsl  gouraud.vs.glsl  phong.fs.glsl  vs.glsl  zoom.fs.glsl  zoom.vs.glsl
ext/tiny_obj_loader/: CMakeLists.txt
pr01/: Makefile
pr02/: Makefile  main.cpp
pr02/shaders/: fs.glsl  vs.glsl
shader/: vs.txt
